убрал "" у тайтла страницы headers-and-footers

--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -8,7 +8,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
-    title "Toxin - шапки и подвалы!"
+    title Toxin - шапки и подвалы!
   body(class="headers-and-footers")
     +logo({ isBig: true })
     .headers-and-footers__wrap
