передаю в main-menu currentPageId

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -53,7 +53,7 @@ mixin header( options = {} )
     .container
       .page-header__wrap
         +logo()
-        +mainMenu(currentMenuItems)
+        +mainMenu(currentMenuItems, options.currentPageId)
         section(class=authClass)
           if options.userName
             p.page-header__user-name= options.userName
