добавил path для сабменю англ. элементов меню

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -35,7 +35,7 @@ include ../main-menu/main-menu
       id: "servicesEng",
       title: "Services",
       path: "#",
-      subMenu: [{ id: "servicesSubEng", title: "service" }]
+      subMenu: [{ id: "servicesSubEng", title: "service", path: "#"}]
     },
     { id: "careersEng", title: "Careers", path: "#" },
     { id: "newsEng", title: "News", path: "#" },
