--- a/src/components/main-menu/main-menu.pug
+++ b/src/components/main-menu/main-menu.pug
@@ -7,13 +7,16 @@ mixin mainMenu(menuItems)
     nav
       ul.main-menu__list
         each item in menuItems
-          if item.subMenu
-            li(class="main-menu__item  main-menu__item--sub-menu")
-              a(href=item.path)= item.title
+          -
+            let itemClass = "main-menu__item";
+            if (item.subMenu) {
+              itemClass += "  main-menu__item--sub-menu";
+            }
+
+          li(class=itemClass)
+            a(href=item.path)= item.title
+            if item.subMenu
               ul.main-menu__sub-menu
                 each subItem in item.subMenu
                   li.main-menu__sub-item
                     a(href=subItem.path)= subItem.title
-          else
-            li.main-menu__item
-              a(href=item.path)= item.title
