добавил отступы обертке и элементам в headers-and-footers

--- a/src/page/headers-and-footers/headers-and-footers.scss
+++ b/src/page/headers-and-footers/headers-and-footers.scss
@@ -13,3 +13,11 @@
 .headers-and-footers {
   background: #f4f4f6;
 }
+
+.headers-and-footers__wrap {
+  margin-top: 70px;
+}
+
+.headers-and-footers__item {
+  margin-bottom: 40px;
+}
