добавил font-family для ссылок в main-menu

--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -160,6 +160,7 @@
 .main-menu__item,
 .main-menu__sub-item {
   a {
+    font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
     color: transparentize($contentColor, 0.5);
     font-size: 14px;
     line-height: 17px;
