задал font-family у paragraph в text-content

--- a/src/components/text-content/text-content.scss
+++ b/src/components/text-content/text-content.scss
@@ -9,6 +9,7 @@
 
 .text-content__paragraph {
   margin: 0;
+  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   color: transparentize($contentColor, 0.25);
   font-size: 14px;
   line-height: 24px;
