--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -32,7 +32,16 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 100px 0 110px;
+  padding: 94px 0 100px;
+  
+  div.logo {
+    margin-left: 12px;
+    margin-bottom: 17px;
+  }
+
+  .text-content {
+    margin-bottom: 29px;
+  }
 }
 
 .page-footer__content {
