--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -5,7 +5,7 @@
   color: $mainColor;
   font-weight: normal;
   font-size: 12px;
-  font-family: $fontFamily;
+  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   line-height: 15px;
   text-transform: uppercase;
   text-decoration: none;
