задал font-family для user-name в page-header

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -53,6 +53,7 @@
 
 .page-header__user-name {
   margin: 0;
+  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   color: $contentColor;
   opacity: 0.5;
 }
