--- a/src/page/headers-and-footers/headers-and-footers.scss
+++ b/src/page/headers-and-footers/headers-and-footers.scss
@@ -12,6 +12,27 @@
 
 .headers-and-footers {
   background: #f4f4f6;
+
+  .page-header__wrap {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .main-menu__item {
+    margin-right: 27px;
+  }
+
+  .button--empty-style {
+    padding: 7px 18px;
+  }
+
+  .page-header__auth {
+    margin-left: 0;
+  }
+
+  .page-header__auth .button:nth-child(2) {
+    padding: 9px 19px;
+  }
 }
 
 .headers-and-footers__wrap {
@@ -19,5 +40,16 @@
 }
 
 .headers-and-footers__item {
-  margin-bottom: 40px;
+  margin-bottom: 42px;
+}
+
+.headers-and-footers__item--diff-header {
+  .main-menu {
+    margin-left: 336px;
+    margin-right: 4px;
+  }
+
+  .page-header__auth--is-auth  {
+    padding-left: 31px;
+  }
 }
