задал font-family

--- a/src/components/text-content/text-content.scss
+++ b/src/components/text-content/text-content.scss
@@ -1,6 +1,7 @@
 .text-content__title {
   margin: 0;
   margin-bottom: 20px;
+  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
