добавил руты в моб версию войти и регистраиця

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -63,7 +63,7 @@ mixin header( options = {} )
             +button({ title: registerBtnTitle, path: "/registration.html" })
             ul.page-header__auth-list
               li.page-header__auth-item
-                a(href="#")= authBtnTitle
+                a(href="/auth.html")= authBtnTitle
               li.page-header__auth-item
-                a(href="#")= registerBtnTitle
+                a(href="/registration.html")= registerBtnTitle
             button(id=authBtnId class="page-header__auth-profile" type="button")
