--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -33,7 +33,7 @@
   align-items: center;
   flex-direction: column;
   padding: 100px 0 108px;
-  
+
   div.logo {
     margin-left: 12px;
     margin-bottom: 17px;
@@ -206,6 +206,10 @@
         }
       }
     }
+  }
+
+  .page-footer__col .input-group__split {
+    justify-content: center;
   }
 }
 
