--- a/src/components/date-wishes/date-wishes.pug
+++ b/src/components/date-wishes/date-wishes.pug
@@ -8,9 +8,40 @@ mixin dateWishes()
         fieldset
           legend.date-wishes__title Найдём номера под ваши пожелания
           .date-wishes__group
-            +input({ id: 'arrival-input', splitId: 'arrival-split-btn', labelName: 'Прибытие', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand-more.svg', placeholder: 'ДД.ММ.ГГГГ', isDarkPlaceholder: true })
-            +input({ id: 'departure-input', splitId: 'departure-split-btn', labelName: 'Выезд', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand-more.svg', placeholder: 'ДД.ММ.ГГГГ', isDarkPlaceholder: true })
+            +input({
+              id: "arrival-input",
+              splitId: "arrival-split-btn",
+              labelName: "Прибытие",
+              isButtonSplit: true,
+              isDownSplitAnimation: true,
+              iconSrc: "expand-more.svg",
+              placeholder: "ДД.ММ.ГГГГ",
+              isDarkPlaceholder: true
+            })
+            +input({
+              id: "departure-input",
+              splitId: "departure-split-btn",
+              labelName: "Выезд",
+              isButtonSplit: true,
+              isDownSplitAnimation: true,
+              iconSrc: "expand-more.svg",
+              placeholder: "ДД.ММ.ГГГГ",
+              isDarkPlaceholder: true
+            })
             div(id="date-picker-container" class="date-picker-container")
-          +input({ id: 'number-guests-input', isFakeInput: true, labelName: 'Гости', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: 'Сколько гостей' })
+          +input({
+            id: "number-guests-input",
+            isFakeInput: true,
+            labelName: "Гости",
+            isButtonSplit: true,
+            isDownSplitAnimation: true,
+            isHaveIcon: true,
+            placeholder: "Сколько гостей"
+          })
           div(id="drop-down-container" class="drop-down-container")
-          +button({ title: 'Подобрать номер', path:"/rooms.html", isHaveIcon: true, buttonType: 'submit' })
+          +button({
+            title: "Подобрать номер",
+            path: "/rooms.html",
+            isHaveIcon: true,
+            buttonType: "submit"
+          })
