--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -23,17 +23,86 @@ block content
       .ui-kit__wrap
         .ui-kit__box
           .ui-kit__inputs
-            +input({ id:'textField', type: 'text', placeholder: 'Email', labelName: 'Text field', isBigLabel: true, descrText: 'Default' })
-            +input({ id:'textFieldHover', type: 'text', placeholder: 'This is pretty awesome', labelName: 'Text field', isBigLabel: true, descrText: 'Hover / Focus', isHover: true })
-            +input({ id: 'number-guests-input', isFakeInput: true, labelName: 'Dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: 'Сколько гостей', isBigLabel: true, descrText: 'Default' })
-            +input({ id:'maskedTextField', type: 'text', placeholder: 'ДД.ММ.ГГГГ', labelName: 'Masked text field', isBigLabel: true, descrText: 'Default' })
+            +input({
+              id: "textField",
+              type: "text",
+              placeholder: "Email",
+              labelName: "Text field",
+              isBigLabel: true,
+              descrText: "Default"
+            })
+            +input({
+              id: "textFieldHover",
+              type: "text",
+              placeholder: "This is pretty awesome",
+              labelName: "Text field",
+              isBigLabel: true,
+              descrText: "Hover / Focus",
+              isHover: true
+            })
+            +input({
+              id: "number-guests-input",
+              isFakeInput: true,
+              labelName: "Dropdown",
+              isButtonSplit: true,
+              isDownSplitAnimation: true,
+              isHaveIcon: true,
+              placeholder: "Сколько гостей",
+              isBigLabel: true,
+              descrText: "Default"
+            })
+            +input({
+              id: "maskedTextField",
+              type: "text",
+              placeholder: "ДД.ММ.ГГГГ",
+              labelName: "Masked text field",
+              isBigLabel: true,
+              descrText: "Default"
+            })
             .ui-kit__inputs-column
-              +input({ id: 'arrival-input', splitId: 'arrival-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand-more.svg', placeholder: 'ДД.ММ.ГГГГ', isDarkPlaceholder: true, isBigLabel: true })
-              +input({ id: 'departure-input', splitId: 'departure-split-btn', labelName: 'Date Dropdown', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand-more.svg', placeholder: '19.08.2019', isDarkPlaceholder: true, isBigLabel: true })
+              +input({
+                id: "arrival-input",
+                splitId: "arrival-split-btn",
+                labelName: "Date Dropdown",
+                isButtonSplit: true,
+                isDownSplitAnimation: true,
+                iconSrc: "expand-more.svg",
+                placeholder: "ДД.ММ.ГГГГ",
+                isDarkPlaceholder: true,
+                isBigLabel: true
+              })
+              +input({
+                id: "departure-input",
+                splitId: "departure-split-btn",
+                labelName: "Date Dropdown",
+                isButtonSplit: true,
+                isDownSplitAnimation: true,
+                iconSrc: "expand-more.svg",
+                placeholder: "19.08.2019",
+                isDarkPlaceholder: true,
+                isBigLabel: true
+              })
             div(class="ui-kit__inputs-column  ui-kit__inputs-column--small")
-              +input({ id: 'filterDateDropdown', isFakeInput: true, labelName: 'Filter date dropdown', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: '19 авг - 23 авг', isBigLabel: true })
+              +input({
+                id: "filterDateDropdown",
+                isFakeInput: true,
+                labelName: "Filter date dropdown",
+                isButtonSplit: true,
+                isDownSplitAnimation: true,
+                isHaveIcon: true,
+                placeholder: "19 авг - 23 авг",
+                isBigLabel: true
+              })
             div(class="ui-kit__inputs-column  ui-kit__inputs-column--small")
-              +input({ isButtonSplit: true, labelName: 'Subscription text field',  isBigLabel: true, iconSrc: 'arrow-forward.svg', type: 'email', placeholder: 'Email', isRightSplitAnimation: true })
+              +input({
+                isButtonSplit: true,
+                labelName: "Subscription text field",
+                isBigLabel: true,
+                iconSrc: "arrow-forward.svg",
+                type: "email",
+                placeholder: "Email",
+                isRightSplitAnimation: true
+              })
           .ui-kit__column
             .ui-kit__column-row
               +checkbox({
@@ -95,8 +164,28 @@ block content
               +pagination({ title: 'Pagination' })
         div(class="ui-kit__box  ui-kit__box--nm")
           div(id="drop-down-container" class="ui-kit__column")
-            +input({ id: "number-guests-input1", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Default" })
-            +input({ id: "number-guests-input2", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "2 спальни, 2 кровати...", isBigLabel: true, descrText: "Expanded" })
+            +input({
+              id: "number-guests-input1",
+              isFakeInput: true,
+              labelName: "Dropdown",
+              isButtonSplit: true,
+              isDownSplitAnimation: true,
+              isHaveIcon: true,
+              placeholder: "2 спальни, 2 кровати...",
+              isBigLabel: true,
+              descrText: "Default"
+            })
+            +input({
+              id: "number-guests-input2",
+              isFakeInput: true,
+              labelName: "Dropdown",
+              isButtonSplit: true,
+              isDownSplitAnimation: true,
+              isHaveIcon: true,
+              placeholder: "2 спальни, 2 кровати...",
+              isBigLabel: true,
+              descrText: "Expanded"
+            })
             div(class="ui-kit__column-row  ui-kit__column-row--mt-large")
               +checkbox({
                 title: "Expandable checkbox list",
@@ -119,18 +208,44 @@ block content
                 ]
               })
           div(id="drop-down-container2" class="ui-kit__column  ui-kit__column--mls  ui-kit__column--wl")
-            +input({ id: "number-guests-input3", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "Сколько гостей", isBigLabel: true })
+            +input({
+              id: "number-guests-input3",
+              isFakeInput: true,
+              labelName: "Dropdown",
+              isButtonSplit: true,
+              isDownSplitAnimation: true,
+              isHaveIcon: true,
+              placeholder: "Сколько гостей",
+              isBigLabel: true
+            })
             div(class="ui-kit__column-row  ui-kit__column-row--bunny-hop")
               +checkbox({
                 title: "Rich Checkbox Buttons",
                 isRich: true,
                 items: [
-                  { id: "wild", title: "Широкий коридор", descr: "Ширина коридоров в номере не менее 91 см." },
-                  { id: "help", title: "Помощник для инвалидов", descr: "На 1 этаже вас встретит специалист  и проводит до номера." },
+                  {
+                    id: "wild",
+                    title: "Широкий коридор",
+                    descr: "Ширина коридоров в номере не менее 91 см."
+                  },
+                  {
+                    id: "help",
+                    title: "Помощник для инвалидов",
+                    descr: "На 1 этаже вас встретит специалист  и проводит до номера."
+                  }
                 ]
               })
           div(id="drop-down-container3" class="ui-kit__column  ui-kit__column--wl  ui-kit__column--lms")
-            +input({ id: "number-guests-input4", isFakeInput: true, labelName: "Dropdown", isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: "Сколько гостей", isBigLabel: true })
+            +input({
+              id: "number-guests-input4",
+              isFakeInput: true,
+              labelName: "Dropdown",
+              isButtonSplit: true,
+              isDownSplitAnimation: true,
+              isHaveIcon: true,
+              placeholder: "Сколько гостей",
+              isBigLabel: true
+            })
             div(class="ui-kit__column-row  ui-kit__column-row--bunny-hop")
               +bullet({
                 title: "Bullet list",
