--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,9 +1,9 @@
 mixin checkbox(options = {})
   -
-    var checkboxClass = "checkbox"
-    var titleClass = "checkbox__title"
-    var labelClass = "checbox__lbl"
-    var listId = options.idExpandableList
+    let labelClass = "checbox__lbl"
+    let titleClass = "checkbox__title"
+    let checkboxClass = "checkbox"
+    const listId = options.idExpandableList
       ? options.idExpandableList
       : "no-expandable-id";
 
