--- a/src/components/hotel-card/hotel-card.pug
+++ b/src/components/hotel-card/hotel-card.pug
@@ -2,7 +2,7 @@ include ../ratebtn/ratebtn
 
 mixin hotelCard(options = {})
   -
-    var sliderBtnClass = options.isBtnSliderHide
+    const sliderBtnClass = options.isBtnSliderHide
       ? "hotel-card__slider-control  hotel-card__slider-control--hide"
       : "hotel-card__slider-control";
   section.hotel-card
