заменил var на const

--- a/src/page/colors-and-type/colors-and-type.pug
+++ b/src/page/colors-and-type/colors-and-type.pug
@@ -3,8 +3,9 @@ include ../../components/color-pallete/color-pallete
 include ../../components/typograph/typograph
 
 block variables
-  - var title = "Toxin - типографика!"
-  - var pageClass = "colors-and-type"
+  -
+    const title = "Toxin - типографика!"
+    const pageClass = "colors-and-type"
 
 block content
   .container
