--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -14,8 +14,9 @@ include ../../components/bullet-list/bullet-list
 include ../../components/comment/comment
 
 block variables
-  - var title = "Toxin - элементы форм"
-  - var pageClass = "form-elements"
+  -
+    const title = "Toxin - элементы форм"
+    const pageClass = "form-elements"
 
 block content
   .container
