--- a/src/page/room-details/room-details.pug
+++ b/src/page/room-details/room-details.pug
@@ -6,10 +6,11 @@ include ../../components/bullet-list/bullet-list
 include ../../components/total-card/total-card
 
 block variables
-  - var title = "Toxin - детали комнаты!"
-  - var description = "Room details description"
-  - var pageClass = "room-details"
-  - var footerBorderTop = true
+  -
+    const title = "Toxin - детали комнаты!"
+    const description = "Room details description"
+    const pageClass = "room-details"
+    const footerBorderTop = true
 
 block content
   .room-details__picture 
