--- a/src/page/auth/auth.pug
+++ b/src/page/auth/auth.pug
@@ -2,9 +2,10 @@ extends ../../layout/main.pug
 include ../../components/auth-card/auth-card
 
 block variables
-  - var title = "Toxin - авторизация!"
-  - var description = "Toxin authorization"
-  - var pageClass = "auth-page"
+  -
+    const title = "Toxin - авторизация!"
+    const description = "Toxin authorization"
+    const pageClass = "auth-page"
   
 block content
   .container
