--- a/src/page/cards/cards.pug
+++ b/src/page/cards/cards.pug
@@ -6,8 +6,9 @@ include ../../components/register-card/register-card
 include ../../components/auth-card/auth-card
 include ../../components/hotel-card/hotel-card
 block variables
-  - var title = "Toxin - карточки"
-  - var pageClass = "cards-page"
+  -
+    const title = "Toxin - карточки"
+    const pageClass = "cards-page"
 
 block content
   .container
