--- a/src/page/main/main.pug
+++ b/src/page/main/main.pug
@@ -2,9 +2,10 @@ extends ../../layout/main.pug
 include ../../components/date-wishes/date-wishes
 
 block variables
-  - var title = "Toxin - главная!"
-  - var description = "Toxin description"
-  - var pageClass = "index-page"
+  -
+    const title = "Toxin - главная!"
+    const description = "Toxin description"
+    const pageClass = "index-page"
   
 block content
   .index-block
