--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -33,7 +33,7 @@
     left: 0;
     width: 10px;
     height: 10px;
-    content: '';
+    content: "";
     background: transparentize($contentColor, 0.75);
     border-radius: 50%;
   }
