--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -148,7 +148,7 @@ block content
               })
           div(class="ui-kit__column  ui-kit__column--xls")
             div(class="ui-kit__column-row  ui-kit__column-row--large")
-              +rangeSlider({ title: "Range Slider", min: '5 000', max: '10 000' })
+              +rangeSlider({ title: "Range Slider", min: "5 000", max: "10 000" })
             div(class="ui-kit__column-row  ui-kit__column-row--small")
               +title({ title: "Buttons" })
               +button({ title: "Click me" })
@@ -160,9 +160,9 @@ block content
               a(href="#" class="ui-kit__link  ui-kit__link--hover") click me
               a(href="#" class="ui-kit__link") click me
             div(class="ui-kit__column-row  ui-kit__column-row--lwidth")
-              +button({ title: 'Перейти к оплате', isHaveIcon: true, buttonType: 'submit' })
+              +button({ title: "Перейти к оплате", isHaveIcon: true, buttonType: "submit" })
             .ui-kit__column-row
-              +pagination({ title: 'Pagination' })
+              +pagination({ title: "Pagination" })
         div(class="ui-kit__box  ui-kit__box--nm")
           div(id="drop-down-container" class="ui-kit__column")
             +input({
