--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -177,7 +177,7 @@ block content
               isBigLabel: true
             })
           .filter__item
-            +rangeSlider({ title: "Диапазон цены", min: '5 000', max: '10 000' })
+            +rangeSlider({ title: "Диапазон цены", min: "5 000", max: "10 000" })
             p.filter__explan Стоимость за сутки пребывания в номере
           .filter__item
             +checkbox({
