--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -6,39 +6,39 @@ mixin input(options = {})
     const labelClass = options.isBigLabel
       ? "input-group__label  input-group__label--big"
       : "input-group__label";
-    let inputClass = "input-group__input"
-    let splitButtonClass = "input-group__button-split"
+    let inputClass = "input-group__input";
+    let splitButtonClass = "input-group__button-split";
 
     if (options.isButtonSplit) {
-      inputClass += "  input-group__input--button-split"
+      inputClass += "  input-group__input--button-split";
     }
 
     if (options.isDarkPlaceholder) {
-      inputClass += "  input-group__input--dark-placeholder"
+      inputClass += "  input-group__input--dark-placeholder";
     }
 
     if (options.isHaveIcon) {
-      inputClass += "  input-group__input--icon"
+      inputClass += "  input-group__input--icon";
     }
 
     if (options.isHover) {
-      inputClass += "  input-group__input--hover"
+      inputClass += "  input-group__input--hover";
     }
 
 
     if (options.isDownSplitAnimation) {
-      splitButtonClass += "  input-group__button-split--down-animation"
+      splitButtonClass += "  input-group__button-split--down-animation";
     }
 
     if (options.isRightSplitAnimation) {
-      splitButtonClass += "  input-group__button-split--right-animation"
+      splitButtonClass += "  input-group__button-split--right-animation";
     }
 
   if options.isFakeInput
     -
-      let inputFakeClass = "input-group__input  input-group__input--fake"
-      if (options.isHaveIcon) inputFakeClass += "  input-group__input--icon"
-      if (options.isDownSplitAnimation) inputFakeClass += "  input-group__button-split--down-animation"
+      let inputFakeClass = "input-group__input  input-group__input--fake";
+      if (options.isHaveIcon) inputFakeClass += "  input-group__input--icon";
+      if (options.isDownSplitAnimation) inputFakeClass += "  input-group__button-split--down-animation";
     if options.labelName
       div(class=inputGroupClass)
         p(class=labelClass id=`for-${options.id}`)= options.labelName
