--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -37,8 +37,15 @@ mixin input(options = {})
   if options.isFakeInput
     -
       let inputFakeClass = "input-group__input  input-group__input--fake";
-      if (options.isHaveIcon) inputFakeClass += "  input-group__input--icon";
-      if (options.isDownSplitAnimation) inputFakeClass += "  input-group__button-split--down-animation";
+
+      if (options.isHaveIcon) {
+        inputFakeClass += "  input-group__input--icon";
+      }
+
+      if (options.isDownSplitAnimation) {
+        inputFakeClass += "  input-group__button-split--down-animation";
+      }
+
     if options.labelName
       div(class=inputGroupClass)
         p(class=labelClass id=`for-${options.id}`)= options.labelName
