--- a/src/components/color-pallete/color-pallete.pug
+++ b/src/components/color-pallete/color-pallete.pug
@@ -1,8 +1,8 @@
 mixin colorPallete(options = {})
   -
-    let colorViewStyle = `background-color: ${options.colorPallete}`
+    let colorViewStyle = `background-color: ${options.colorPallete}`;
     if (options.colorOpacity) {
-      colorViewStyle += `; opacity: ${options.colorOpacity}`
+      colorViewStyle += `; opacity: ${options.colorOpacity}`;
     }
 
   section.color-pallete
