--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -50,7 +50,7 @@ mixin header(options = {})
     const currentMenuItems = options.isEnglish ? menuEngItems : menuItems;
     const authBtnTitle = options.isEnglish ? "Login" : "Войти";
     const registerBtnTitle = options.isEnglish ? "Register" : "Зарегистрироваться";
-    const authListId = options.authListId ? options.authListId : "authListId"
+    const authListId = options.authListId ? options.authListId : "authListId";
     const profileBtnId = options.profileBtnId ? options.profileBtnId : "authButton";
 
   header.page-header
