--- a/src/page/auth/auth.pug
+++ b/src/page/auth/auth.pug
@@ -3,9 +3,9 @@ include ../../components/auth-card/auth-card
 
 block variables
   -
-    const title = "Toxin - авторизация!"
-    const description = "Toxin authorization"
-    const pageClass = "auth-page"
+    const title = "Toxin - авторизация!";
+    const description = "Toxin authorization";
+    const pageClass = "auth-page";
   
 block content
   .container
