--- a/src/page/cards/cards.pug
+++ b/src/page/cards/cards.pug
@@ -7,8 +7,8 @@ include ../../components/auth-card/auth-card
 include ../../components/hotel-card/hotel-card
 block variables
   -
-    const title = "Toxin - карточки"
-    const pageClass = "cards-page"
+    const title = "Toxin - карточки";
+    const pageClass = "cards-page";
 
 block content
   .container
