--- a/src/page/colors-and-type/colors-and-type.pug
+++ b/src/page/colors-and-type/colors-and-type.pug
@@ -4,8 +4,8 @@ include ../../components/typograph/typograph
 
 block variables
   -
-    const title = "Toxin - типографика!"
-    const pageClass = "colors-and-type"
+    const title = "Toxin - типографика!";
+    const pageClass = "colors-and-type";
 
 block content
   .container
