--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -15,8 +15,8 @@ include ../../components/comment/comment
 
 block variables
   -
-    const title = "Toxin - элементы форм"
-    const pageClass = "form-elements"
+    const title = "Toxin - элементы форм";
+    const pageClass = "form-elements";
 
 block content
   .container
