--- a/src/page/main/main.pug
+++ b/src/page/main/main.pug
@@ -3,9 +3,9 @@ include ../../components/date-wishes/date-wishes
 
 block variables
   -
-    const title = "Toxin - главная!"
-    const description = "Toxin description"
-    const pageClass = "index-page"
+    const title = "Toxin - главная!";
+    const description = "Toxin description";
+    const pageClass = "index-page";
   
 block content
   .index-block
