--- a/src/page/registration/registration.pug
+++ b/src/page/registration/registration.pug
@@ -3,9 +3,9 @@ include ../../components/register-card/register-card
 
 block variables
   -
-    const title = "Toxin - регистрация!"
-    const description = "Toxin registration"
-    const pageClass = "registration-page"
+    const title = "Toxin - регистрация!";
+    const description = "Toxin registration";
+    const pageClass = "registration-page";
 
 block content
   .container
