--- a/src/page/room-details/room-details.pug
+++ b/src/page/room-details/room-details.pug
@@ -7,10 +7,10 @@ include ../../components/total-card/total-card
 
 block variables
   -
-    const title = "Toxin - детали комнаты!"
-    const description = "Room details description"
-    const pageClass = "room-details"
-    const footerBorderTop = true
+    const title = "Toxin - детали комнаты!";
+    const description = "Room details description";
+    const pageClass = "room-details";
+    const footerBorderTop = true;
 
 block content
   .room-details__picture 
