--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -7,10 +7,10 @@ include ../../components/pagination/pagination
 
 block variables
   -
-    const title = "Toxin - подбери свой отель!"
-    const description = "Toxin description"
-    const pageClass = "rooms-page"
-    const footerBorderTop = true
+    const title = "Toxin - подбери свой отель!";
+    const description = "Toxin description";
+    const pageClass = "rooms-page";
+    const footerBorderTop = true;
 
   -
     const hotels = [
@@ -147,7 +147,7 @@ block variables
             { src: "../../components/hotel-card/hotel-12.png", alt: "Красивый отель" }
           ]
         }
-      ]
+      ];
   
 block content
   .container
