--- a/src/page/room-details/room-details.scss
+++ b/src/page/room-details/room-details.scss
@@ -25,6 +25,7 @@
 
   img {
     width: 100%;
+    height: 100%;
     max-width: 981px;
     margin: 0;
     padding: 0;
@@ -39,6 +40,7 @@
 
   img {
     max-width: 461px;
+    height: 50%;
 
     &:last-child {
       max-height: 240px;
